--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0",
     "fibers": "^3.1.1",
+    "highcharts": "^7.1.1",
     "sass": "^1.17.2",
     "sass-loader": "^7.1.0",
+    "vue-particles": "^1.0.9",
     "vue-template-compiler": "^2.5.21"
   }
 }
