--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "core-js": "^2.6.5",
-    "lodash": "^4.17.11",
-    "vue": "^2.6.6",
-    "vue-router": "^3.0.1",
     "highcharts": "^7.1.1",
+    "lodash": "^4.17.11",
+    "querybuilder": "^1.1.0",
+    "vue": "^2.6.6",
     "vue-particles": "^1.0.9",
+    "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
