--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.18.0",
     "core-js": "^2.6.5",
     "d3": "^5.9.2",
+    "gsap": "^2.1.3",
     "highcharts": "^7.1.1",
     "lodash": "^4.17.11",
     "querybuilder": "^1.1.0",
